# SensorAggregator

./: CMakeLists.txt
app/: CMakeLists.txt
app/collect/: server.cpp
